<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context="www.amriparitam.in.wordgame.MainActivity">

    <EditText
        android:id="@+id/def"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/word"
        android:hint="@string/enter"
        android:layout_width="wrap_content"
        android:layout_below="@+id/def"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:layout_alignParentRight="true"
        android:text="@string/end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/word"
        android:id="@id/but1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/check"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_margin="20dp"/>
            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_margin="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/but1">
            <Button
                android:id="@+id/tryAgain"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tryAgain"
                android:layout_margin="20dp"/>

            <Button
                android:id="@+id/hint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/hint"
                android:layout_margin="20dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
